<resources>
    <!-- App Global Used Constants -->
    <string name="app_name">DF Planner</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <!-- Sign In Page Labels -->
    <string name="biometric_description">Place your finger on the scanner to verify your identity</string>
    <string name="biometric_subtitle">Sign In with Username %1$s</string>
    <string name="fingerprint">Sign in with fingerprint?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_heading">Sign in to DF Planner</string>

    <!-- Calendar -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="month_template">%1$s %2$d</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <!-- Tasks -->
    <string name="add_task">Add Task</string>
</resources>